--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
   <head>
     <meta chartype="utf-8"/>
     <title>Front-end Demo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
   </head>
   <body>
-    <h1>Front-end Demo</h1>
+    <section class="container-fluid">
+      <section class="header row">
+        <h1 class="col-md-4 col-md-offset-4">Front-end Demo</h1>
+      </section>
+      <section class="view row">
+        <h1 id="counter" class="col-md-2 col-md-offset-5">?</h1>
+      </section>
+    </section>
   </body>
 </html>
