--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
         <h1 id="counter" class="col-md-2 col-md-offset-5">?</h1>
       </section>
     </section>
+    <script src="js/counter.js"></script>
+    <script src="js/application.js"></script>
   </body>
 </html>
