--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
-<html>
+<html ng-app="demoApp">
   <head>
     <meta chartype="utf-8"/>
     <title>Front-end Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
   </head>
-  <body>
+  <body ng-controller="demoController">
     <section class="container-fluid">
       <section class="header row">
         <h1 class="col-md-4 col-md-offset-4">Front-end Demo</h1>
       </section>
       <section class="view row">
-        <h1 id="counter" class="col-md-2 col-md-offset-5">?</h1>
+        <h1 id="counter" class="col-md-2 col-md-offset-5">{{count}}</h1>
       </section>
     </section>
     <script src="bower_components/angular/angular.min.js"></script>
