--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="col-md-4 col-md-offset-4">Front-end Demo</h1>
       </section>
       <section class="view row">
-        <h1 id="counter" class="col-md-2 col-md-offset-5">{{count}}</h1>
+        <h1 id="counter" class="col-md-2 col-md-offset-5" ng-click="increment()">{{count}}</h1>
       </section>
     </section>
     <script src="bower_components/angular/angular.min.js"></script>
