--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       </section>
       <section class="view row">
         <h1 id="counter" class="col-md-2 col-md-offset-5" ng-click="increment()">{{count}}</h1>
+        <p class="col-md-2 col-md-offset-5">{{count}}</p>
       </section>
     </section>
     <script src="bower_components/angular/angular.min.js"></script>
