--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <section class="view row">
         <h1 id="counter" class="col-md-2 col-md-offset-5" ng-click="increment()">{{count}}</h1>
         <p class="col-md-2 col-md-offset-5">{{count}}</p>
+        <input type="text" class="col-md-2 col-md-offset-5" ng-model="count"/>
       </section>
     </section>
     <script src="bower_components/angular/angular.min.js"></script>
