--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
     <title>Front-end Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/kwetter.css"/>
   </head>
   <body>
     <section class="container-fluid">
       <section class="header row">
-        <h1 class="col-md-4 col-md-offset-4">Front-end Demo</h1>
+        <h1 class="col-md-4 col-md-offset-4">Kwetter</h1>
       </section>
       <section class="view row">
-        <h1 id="counter" class="col-md-2 col-md-offset-5">?</h1>
+        <div class="tweet col-md-8 col-md-offset-2">
+          <div class="content">
+            <img class="avatar" src="image/placeholder1.gif" alt="">
+            <p class="tweet-text" >Kittens are nice!</p>
+          </div>
+          <div class="info"><span class="favourite">37</span></div>
+        </div>
       </section>
     </section>
     <script src="bower_components/angular/angular.min.js"></script>
