--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html ng-app="kwetterApp">
   <head>
     <meta chartype="utf-8"/>
     <title>Front-end Demo</title>
@@ -12,13 +12,13 @@
       <section class="header row">
         <h1 class="col-md-4 col-md-offset-4">Kwetter</h1>
       </section>
-      <section class="view row">
+      <section class="view row" ng-controller="timeline">
         <div class="tweet col-md-8 col-md-offset-2">
           <div class="content">
-            <img class="avatar" src="image/placeholder1.gif" alt="">
-            <p class="tweet-text" >Kittens are nice!</p>
+            <img class="avatar" src="{{tweet.avatar}}" alt="">
+            <p class="tweet-text" >{{tweet.content}}</p>
           </div>
-          <div class="info"><span class="favourite">37</span></div>
+          <div class="info"><span class="favourite">{{tweet.favourite}}</span></div>
         </div>
       </section>
     </section>
