--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="col-md-4 col-md-offset-4">Kwetter</h1>
       </section>
       <section class="view row" ng-repeat="tweet in tweets">
-        <tweet></tweet>
+        <tweet data="tweet"></tweet>
       </section>
     </section>
     <script src="bower_components/angular/angular.min.js"></script>
